{
  "version": 4,
  "terraform_version": "1.10.5",
  "serial": 195,
  "lineage": "0ebb2a15-292e-8cef-faa6-b6cd4e12c015",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "backend_nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/a2fe0840-7fec-4c9c-876d-5add87e8dc52/resourceGroups/ironhack-project/providers/Microsoft.Network/networkInterfaces/ironhack-project-nic-backend",
            "internal_domain_name_suffix": "hvwfn2g0h4mu3g3rrnjyzjgwwc.ax.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "ip_configuration_backend",
                "primary": true,
                "private_ip_address": "10.0.2.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/a2fe0840-7fec-4c9c-876d-5add87e8dc52/resourceGroups/ironhack-project/providers/Microsoft.Network/publicIPAddresses/cteixeira_ironhackproject_backend",
                "subnet_id": "/subscriptions/a2fe0840-7fec-4c9c-876d-5add87e8dc52/resourceGroups/ironhack-project/providers/Microsoft.Network/virtualNetworks/ironhack-project-vnet/subnets/backend_subnet"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "westeurope",
            "mac_address": "60-45-BD-F5-B4-62",
            "name": "ironhack-project-nic-backend",
            "private_ip_address": "10.0.2.4",
            "private_ip_addresses": [
              "10.0.2.4"
            ],
            "resource_group_name": "ironhack-project",
            "virtual_machine_id": "/subscriptions/a2fe0840-7fec-4c9c-876d-5add87e8dc52/resourceGroups/ironhack-project/providers/Microsoft.Compute/virtualMachines/backend"
          },
          "dependencies": [
            "azurerm_public_ip.backend_public_ip",
            "azurerm_resource_group.resource-group",
            "azurerm_subnet.backend",
            "azurerm_virtual_network.ironhack_project_vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "frontend_nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/a2fe0840-7fec-4c9c-876d-5add87e8dc52/resourceGroups/ironhack-project/providers/Microsoft.Network/networkInterfaces/ironhack-project-nic-frontend",
            "internal_domain_name_suffix": "hvwfn2g0h4mu3g3rrnjyzjgwwc.ax.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "ip_configuration_frontend",
                "primary": true,
                "private_ip_address": "10.0.3.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/a2fe0840-7fec-4c9c-876d-5add87e8dc52/resourceGroups/ironhack-project/providers/Microsoft.Network/publicIPAddresses/cteixeira_ironhackproject_frontend",
                "subnet_id": "/subscriptions/a2fe0840-7fec-4c9c-876d-5add87e8dc52/resourceGroups/ironhack-project/providers/Microsoft.Network/virtualNetworks/ironhack-project-vnet/subnets/frontend_subnet"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "westeurope",
            "mac_address": "7C-1E-52-29-94-87",
            "name": "ironhack-project-nic-frontend",
            "private_ip_address": "10.0.3.4",
            "private_ip_addresses": [
              "10.0.3.4"
            ],
            "resource_group_name": "ironhack-project",
            "virtual_machine_id": "/subscriptions/a2fe0840-7fec-4c9c-876d-5add87e8dc52/resourceGroups/ironhack-project/providers/Microsoft.Compute/virtualMachines/frontend"
          },
          "dependencies": [
            "azurerm_public_ip.frontend_public_ip",
            "azurerm_resource_group.resource-group",
            "azurerm_subnet.frontend",
            "azurerm_virtual_network.ironhack_project_vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "nic_ssh_backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/a2fe0840-7fec-4c9c-876d-5add87e8dc52/resourceGroups/ironhack-project/providers/Microsoft.Network/networkInterfaces/ironhack-project-nic-backend|/subscriptions/a2fe0840-7fec-4c9c-876d-5add87e8dc52/resourceGroups/ironhack-project/providers/Microsoft.Network/networkSecurityGroups/frontend_nsg",
            "network_interface_id": "/subscriptions/a2fe0840-7fec-4c9c-876d-5add87e8dc52/resourceGroups/ironhack-project/providers/Microsoft.Network/networkInterfaces/ironhack-project-nic-backend",
            "network_security_group_id": "/subscriptions/a2fe0840-7fec-4c9c-876d-5add87e8dc52/resourceGroups/ironhack-project/providers/Microsoft.Network/networkSecurityGroups/frontend_nsg"
          },
          "dependencies": [
            "azurerm_network_interface.backend_nic",
            "azurerm_network_security_group.frontend_nsg",
            "azurerm_public_ip.backend_public_ip",
            "azurerm_resource_group.resource-group",
            "azurerm_subnet.backend",
            "azurerm_virtual_network.ironhack_project_vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "nic_ssh_frontend",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/a2fe0840-7fec-4c9c-876d-5add87e8dc52/resourceGroups/ironhack-project/providers/Microsoft.Network/networkInterfaces/ironhack-project-nic-frontend|/subscriptions/a2fe0840-7fec-4c9c-876d-5add87e8dc52/resourceGroups/ironhack-project/providers/Microsoft.Network/networkSecurityGroups/frontend_nsg",
            "network_interface_id": "/subscriptions/a2fe0840-7fec-4c9c-876d-5add87e8dc52/resourceGroups/ironhack-project/providers/Microsoft.Network/networkInterfaces/ironhack-project-nic-frontend",
            "network_security_group_id": "/subscriptions/a2fe0840-7fec-4c9c-876d-5add87e8dc52/resourceGroups/ironhack-project/providers/Microsoft.Network/networkSecurityGroups/frontend_nsg"
          },
          "dependencies": [
            "azurerm_network_interface.frontend_nic",
            "azurerm_network_security_group.frontend_nsg",
            "azurerm_public_ip.frontend_public_ip",
            "azurerm_resource_group.resource-group",
            "azurerm_subnet.frontend",
            "azurerm_virtual_network.ironhack_project_vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "backend_nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/a2fe0840-7fec-4c9c-876d-5add87e8dc52/resourceGroups/ironhack-project/providers/Microsoft.Network/networkSecurityGroups/backend_nsg",
            "location": "westeurope",
            "name": "backend_nsg",
            "resource_group_name": "ironhack-project",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "SSH",
                "priority": 1001,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "6379",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "redis",
                "priority": 1002,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.resource-group"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "frontend_nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/a2fe0840-7fec-4c9c-876d-5add87e8dc52/resourceGroups/ironhack-project/providers/Microsoft.Network/networkSecurityGroups/frontend_nsg",
            "location": "westeurope",
            "name": "frontend_nsg",
            "resource_group_name": "ironhack-project",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "80",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "httpport",
                "priority": 1050,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": null,
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "SSH",
                "priority": 1001,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": null,
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "8080",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "voteapp",
                "priority": 1010,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": null,
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "8090",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "resultapp",
                "priority": 1020,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.resource-group"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "backend_public_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/a2fe0840-7fec-4c9c-876d-5add87e8dc52/resourceGroups/ironhack-project/providers/Microsoft.Network/publicIPAddresses/cteixeira_ironhackproject_backend",
            "idle_timeout_in_minutes": 4,
            "ip_address": "13.95.89.201",
            "ip_version": "IPv4",
            "location": "westeurope",
            "name": "cteixeira_ironhackproject_backend",
            "resource_group_name": "ironhack-project",
            "sku": "Basic",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.resource-group"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "frontend_public_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/a2fe0840-7fec-4c9c-876d-5add87e8dc52/resourceGroups/ironhack-project/providers/Microsoft.Network/publicIPAddresses/cteixeira_ironhackproject_frontend",
            "idle_timeout_in_minutes": 4,
            "ip_address": "52.166.51.31",
            "ip_version": "IPv4",
            "location": "westeurope",
            "name": "cteixeira_ironhackproject_frontend",
            "resource_group_name": "ironhack-project",
            "sku": "Basic",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.resource-group"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.2.0/24"
            ],
            "default_outbound_access_enabled": true,
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/a2fe0840-7fec-4c9c-876d-5add87e8dc52/resourceGroups/ironhack-project/providers/Microsoft.Network/virtualNetworks/ironhack-project-vnet/subnets/backend_subnet",
            "name": "backend_subnet",
            "private_endpoint_network_policies": "Enabled",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "ironhack-project",
            "virtual_network_name": "ironhack-project-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.resource-group",
            "azurerm_virtual_network.ironhack_project_vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "frontend",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.3.0/24"
            ],
            "default_outbound_access_enabled": true,
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/a2fe0840-7fec-4c9c-876d-5add87e8dc52/resourceGroups/ironhack-project/providers/Microsoft.Network/virtualNetworks/ironhack-project-vnet/subnets/frontend_subnet",
            "name": "frontend_subnet",
            "private_endpoint_network_policies": "Enabled",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "ironhack-project",
            "virtual_network_name": "ironhack-project-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.resource-group",
            "azurerm_virtual_network.ironhack_project_vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "ironhack_project_vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "f0566c3d-3fda-4e99-9bb1-8b538ca4d6b2",
            "id": "/subscriptions/a2fe0840-7fec-4c9c-876d-5add87e8dc52/resourceGroups/ironhack-project/providers/Microsoft.Network/virtualNetworks/ironhack-project-vnet",
            "location": "westeurope",
            "name": "ironhack-project-vnet",
            "resource_group_name": "ironhack-project",
            "subnet": [
              {
                "address_prefix": "10.0.2.0/24",
                "id": "/subscriptions/a2fe0840-7fec-4c9c-876d-5add87e8dc52/resourceGroups/ironhack-project/providers/Microsoft.Network/virtualNetworks/ironhack-project-vnet/subnets/backend_subnet",
                "name": "backend_subnet"
              },
              {
                "address_prefix": "10.0.3.0/24",
                "id": "/subscriptions/a2fe0840-7fec-4c9c-876d-5add87e8dc52/resourceGroups/ironhack-project/providers/Microsoft.Network/virtualNetworks/ironhack-project-vnet/subnets/frontend_subnet",
                "name": "frontend_subnet"
              }
            ]
          },
          "dependencies": [
            "azurerm_resource_group.resource-group"
          ]
        }
      ]
    }
  ]
}